--- a/homework/Help.resx
+++ b/homework/Help.resx
@@ -117,19 +117,41 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="menuStripMain.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>206, 3</value>
-  </metadata>
-  <metadata name="contextMenuStripDocList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>341, 3</value>
-  </metadata>
-  <metadata name="contextMenuStripDirs.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>530, 3</value>
-  </metadata>
-  <metadata name="folderBrowserDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>700, 3</value>
-  </metadata>
-  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>25</value>
-  </metadata>
+  <data name="label1.Text" xml:space="preserve">
+    <value>This program is for managing files on the computer.
+
+Panels: at the left you can select one folder, those contents will appear in the middle (these are files), at selecting a file, on the left it will appear the informations of it.
+
+Add files: you can add files by clicking on the Add files or Add folder button (left top) or from the file menu, or just drag'n'drop some files/folders into the program.
+
+What extensions are allowed: see at the File-&gt;Settings . You can fully customize. These settings only set to the current catalog only!
+
+Open files: by double clicking on a file in the middle panel or selecting multiple files (or single) in the middle panel than click via secondary mouse button and select Open.
+
+How can I add virtual folder? Left click on the Custom Directories at the left panel or from the file menu or with the Create Folder button at left top.
+
+Editing file info: Select one file, than in the left panel click on Edit button, edit informations than click on Save button (at the same place). If you move away from
+that file to another, your editions will be lost!
+
+Search: there are two options for that:
+a) Simple: it search everywhere in the program (files, file names, path, tags, ect.) you find at right top, write something to the textbox, than click to OK button.
+b) Advanced: There's an Advanced Search button at the top right corner, click on it, than it shows up a new window. There you can write specified text to categories.
+All categories are connected with AND operator.
+
+By selecting multiple files at the middle panel, you can drag'n'drop to the right panel into a virtual folder (only). Or by clicking with the secondary mouse button
+you can i.e. remove from the program the selected files (only from program! the files will be still on the hard drive).
+
+There are some automatic list (Author and Tags) which automatically refreshing when you edited a file. If you select a chield of these it will show you the those files, which
+has that attributes (tag or it is the selected author).
+
+All documents: all managed documents by this app.
+
+Recently Added: those files shows up here, which were added in the last 3 day.
+
+Recently Read: those files shows up here, which were read in the last 3 day (opened from this program).
+
+Favorites: those files shows up here, which were added to favorites.
+
+Unsorted: those files shows up here, which aren't in any virtual directory (folder).</value>
+  </data>
 </root>
